src/tests/snapshots/eventql_parser__tests__analysis__analyze_accept_group_by_with_order_by_with_agg.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&arena, &Default::default())"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by:
    expr:
      attrs:
        pos:
          line: 2
          col: 10
      node_ref:
        ptr: 2
        key: 16817656567714378052
    predicate: ~
  order_by:
    expr:
      attrs:
        pos:
          line: 3
          col: 10
      node_ref:
        ptr: 6
        key: 577847590807366763
    order: Asc
  limit: ~
  projection:
    attrs:
      pos:
        line: 4
        col: 14
    node_ref:
      ptr: 10
      key: 577847590807366763
  distinct: false
  meta:
    project: Number
    aggregate: true
