src/tests/snapshots/eventql_parser__tests__analysis__analyze_allow_constant_agg_func.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&arena, &Default::default())"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    node_ref:
      ptr: 0
      key: 9971702580483117551
  distinct: false
  meta:
    project: Number
    aggregate: true
