src/tests/snapshots/eventql_parser__tests__analysis__analyze_allow_regular_property_project_into.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{\n    q.run_static_analysis(&arena, &Default::default()).map(|q| q.view(&arena))\n})"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      Access:
        target:
          attrs:
            pos:
              line: 2
              col: 14
          value:
            Id: e
        field: type
  distinct: false
  meta:
    project: String
    aggregate: false
