src/tests/snapshots/eventql_parser__tests__analysis__analyze_invalid_type_conversion_custom_type.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{\n    q.run_static_analysis(&arena, &Default::default()).map(|q| q.view(&arena))\n})"
---
Err:
  Analysis:
    UnsupportedCustomType:
      - 2
      - 37
      - Foobar
