src/tests/snapshots/eventql_parser__tests__analysis__analyze_project_agg_value.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{\n    q.run_static_analysis(&arena, &Default::default()).map(|q| q.view(&arena))\n})"
---
Ok:
  attrs:
    pos:
      line: 1
      col: 1
  sources:
    - binding:
        name: e
        pos:
          line: 1
          col: 6
      kind:
        Name: events
  predicate: ~
  group_by: ~
  order_by: ~
  limit: ~
  projection:
    attrs:
      pos:
        line: 2
        col: 14
    value:
      App:
        func: count
        args:
          - attrs:
              pos:
                line: 2
                col: 20
            value:
              Binary:
                lhs:
                  attrs:
                    pos:
                      line: 2
                      col: 20
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 2
                            col: 20
                        value:
                          Access:
                            target:
                              attrs:
                                pos:
                                  line: 2
                                  col: 20
                              value:
                                Id: e
                            field: data
                      field: price
                operator: Gt
                rhs:
                  attrs:
                    pos:
                      line: 2
                      col: 35
                  value:
                    Number: 10
  distinct: false
  meta:
    project: Number
    aggregate: true
