src/tests/snapshots/eventql_parser__tests__analysis__analyze_reject_agg_in_predicate.snap
---
source: src/tests/analysis.rs
expression: "query.and_then(|q|\n{ session.run_static_analysis(q).map(|q| q.view(&session.arena)) })"
---
Err:
  Analysis:
    WrongAggFunUsage:
      - 2
      - 11
      - count
