src/tests/snapshots/eventql_parser__tests__analysis__analyze_reject_constant_expr_in_project_into_clause.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    ConstantExprInProjectIntoClause:
      - 2
      - 18
