src/tests/snapshots/eventql_parser__tests__analysis__analyze_reject_group_by_no_agg.snap
---
source: src/tests/analysis.rs
expression: "query.run_static_analysis(&Default::default())"
---
Err:
  Analysis:
    ExpectAggExpr:
      - 3
      - 14
